04.nginx-controller/01.SingleHostSingleEnvIngress/01-single-host-single-env-ingress.yaml
# This works with http://mazacloud.com/api-docs/  I get Swagger DOC
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mazacloud-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: mazacloud.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodejstemplate
            port:
              number: 80
